--- a/NBXplorer/NBXplorer.csproj
+++ b/NBXplorer/NBXplorer.csproj
@@ -41,7 +41,14 @@
 	  <PackageReference Include="NicolasDorier.CommandLine.Configuration" Version="2.0.0" />
 	<PackageReference Include="NicolasDorier.StandardConfiguration" Version="2.0.0" />
 	<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.9"></PackageReference>
+      <PackageReference Include="OpenTelemetry.Exporter.Console" Version="1.5.1" />
+      <PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.5.1" />
+      <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.5.1" />
+      <PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.5.1-beta.1" />
+      <PackageReference Include="OpenTelemetry.Instrumentation.Runtime" Version="1.5.0" />
+      <PackageReference Include="OpenTelemetry.Instrumentation.EntityFrameworkCore" Version="1.0.0-beta.7" />
     <ProjectReference Include="..\NBXplorer.Client\NBXplorer.Client.csproj" />
+      
   </ItemGroup>
 
   <ItemGroup>
